# GaltonBoard_AssignmentRS

./: CMakeLists.txt  README.txt  galton.cpp  plot.plt
